# axtp-python-runtime

./: .gitignore  AXTP_SPEC.lock.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  upgrade-axtp-spec.yml
conformance/: runtime-profile.yaml
devtools/conformance/: runtime-profile.yaml
devtools/generators/: README.md  package.json
devtools/generators/src/: protocolValidator.test.ts
devtools/generators/src/__snapshots__/: protocol.generated.json  protocol.generated.md
devtools/scripts/: axtp-versioning.mjs  generate-axtp-artifacts.sh  run-conformance.sh
docs/generator/: GENERATED_VERSIONING.md
generators/: README.md  package.json
scripts/: generate-axtp-artifacts.sh  run-conformance.sh  upgrade-axtp-spec.sh
src/axtp_runtime/: __init__.py  broker.py  codec.py  core.py  endpoint.py  media_profile.py  model.py  sdk.py  stream.py  transport.py  wire_io.py
tests/: test_media_profile.py  test_runtime.py  test_stream.py
tests/conformance/: test_conformance.py
